--- a/stylesheet101.css
+++ b/stylesheet101.css
@@ -13,14 +13,15 @@ body {
   padding: 8rem;
   color: #f1be32;
   font-size: 90px;
-  margin-left: 20px;
+  margin: 0px;
+  display: -webkit-inline-flex;
   }
 
   h1 {
     padding: 8rem;
     font-size: 90px;
     margin-right: 0px;
-    
+    display: flexbox;
     color: white;
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
     }
@@ -64,8 +65,9 @@ body {
   }
 
   img{
-    margin-left: 50px;
-    margin-right: 100px;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flexbox;
   }
   #logo {
   background-color: #000008;
@@ -78,12 +80,14 @@ body {
     height: 50px;
     background-color: #000008;
     display: flex;
+    display: flexbox;
   }
 
   footer{
     display: block;
     color: white;
     text-align: center;
+    display: flexbox;
     padding: 16px 16px;
   }
 
@@ -93,13 +97,12 @@ body {
     padding-right: 100px;
     padding-left: 100px;
     display: flexbox;
-    margin-left: 50px;
+    margin-left: 150px;
     
 }
   table{
     padding-right: 100px;
     padding-left: 20px;
-    display: flexbox;
     margin-top: 20px;
   }
   th, td{
